@@ -540,6 +540,7 @@ x2goclient (4.1.0.0-0x2go1) UNRELEASED; urgency=medium
     - macbuild.sh: make compatible with new llvm-based otool binary, which now
       uses proper return values. Be backwards-compatible with otool-classic.
     - res/i18n/: refresh translation files.
+    - deduplicate.sh: remove file, now obsolete and merged into macbuild.sh.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.1.0.0):
